[gd_scene load_steps=22 format=3 uid="uid://blgultqxld18q"]

[ext_resource type="PackedScene" path="res://GameScreen/Hand.tscn" id="1_56rkn"]
[ext_resource type="PackedScene" path="res://GameScreen/Turns/Turns.tscn" id="2_j64vv"]
[ext_resource type="Script" path="res://GameScreen/Score.gd" id="3_g6w2l"]
[ext_resource type="PackedScene" uid="uid://dlytt6vu2k6q2" path="res://Reward/RewardMarker.tscn" id="4_bwyhj"]
[ext_resource type="Texture2D" uid="uid://bosrvrsa1q17t" path="res://GameScreen/MenuButton.svg" id="5_873i1"]
[ext_resource type="Script" path="res://GameScreen/Field/Field.gd" id="6_7xpct"]
[ext_resource type="Script" path="res://GameScreen/Field/Diamonds.gd" id="6_58l5m"]
[ext_resource type="Script" path="res://GameScreen/Field/Spades.gd" id="7_c7t16"]
[ext_resource type="Script" path="res://GameScreen/Field/Hearts.gd" id="8_fhn0x"]
[ext_resource type="Texture2D" uid="uid://bv5extw7i2q3s" path="res://GameScreen/Suite/Hearts.png" id="9_k3wye"]
[ext_resource type="Script" path="res://GameScreen/Field/Clubs.gd" id="9_qy27a"]
[ext_resource type="Script" path="res://GameScreen/Action/RedrawCardArea.gd" id="10_if57e"]
[ext_resource type="Script" path="res://GameScreen/Action/PlayAgainArea.gd" id="11_61q87"]
[ext_resource type="Texture2D" uid="uid://c4s5k1gwq7a5h" path="res://GameScreen/Suite/Clubs.png" id="11_ogyhr"]
[ext_resource type="Script" path="res://GameScreen/Deck.gd" id="12_54ssd"]
[ext_resource type="Script" path="res://GameScreen/Action/ActionIndicator.gd" id="13_j0q4n"]
[ext_resource type="Script" path="res://GameScreen/NewRoundAnimation.gd" id="17_hf8a0"]
[ext_resource type="PackedScene" path="res://GameScreen/Tutorial.tscn" id="18_vn86j"]

[sub_resource type="Animation" id="Animation_vgxlu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/TurnCounter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(50, 1104)]
}

[sub_resource type="Animation" id="Animation_pin7f"]
resource_name = "round_complete"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/TurnCounter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 1.15, 1.45),
"transitions": PackedFloat32Array(0.277393, 1, 2, 1),
"update": 0,
"values": [Vector2(-200, 0), Vector2(-20, 0), Vector2(20, 0), Vector2(200, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 1.4, 1.5),
"transitions": PackedFloat32Array(0.435275, 1, 1, 1),
"update": 0,
"values": [Vector2(-1000, 1104), Vector2(40, 1104), Vector2(60, 1104), Vector2(1200, 1104)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qhb30"]
_data = {
"RESET": SubResource("Animation_vgxlu"),
"round_complete": SubResource("Animation_pin7f")
}

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_right = 540.0
offset_bottom = 2408.0
grow_horizontal = 2
grow_vertical = 2

[node name="Hand" parent="." instance=ExtResource("1_56rkn")]
position = Vector2(540, 2045)

[node name="TopBar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 50.0
offset_top = 61.0
offset_right = -30.0
offset_bottom = 136.0
grow_horizontal = 2

[node name="Turns" parent="TopBar" instance=ExtResource("2_j64vv")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5

[node name="Score" type="Control" parent="TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -24.5
offset_right = 49.0
offset_bottom = 24.5
grow_vertical = 2
script = ExtResource("3_g6w2l")

[node name="Reward" parent="TopBar/Score" instance=ExtResource("4_bwyhj")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
color = Color(0.341176, 0.239216, 1, 1)

[node name="MenuButton" type="TextureButton" parent="TopBar"]
modulate = Color(0.356863, 0.282353, 0.85098, 1)
custom_minimum_size = Vector2(80, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -33.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("5_873i1")
ignore_texture_size = true
stretch_mode = 4

[node name="Field" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 152.0
offset_right = -40.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_7xpct")

[node name="Clubs" type="Control" parent="Field"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 68.0
offset_bottom = 268.0
grow_horizontal = 2
script = ExtResource("9_qy27a")

[node name="SuiteSymbol" type="TextureRect" parent="Field/Clubs"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 0
offset_left = 15.0
offset_top = -3.0
offset_right = 115.0
offset_bottom = 87.0
texture = ExtResource("11_ogyhr")
ignore_texture_size = true
stretch_mode = 4

[node name="SlotContainer" type="HBoxContainer" parent="Field/Clubs"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Diamonds" type="Container" parent="Field"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 359.0
offset_bottom = 1089.0
script = ExtResource("6_58l5m")

[node name="Spades" type="Container" parent="Field"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 359.0
offset_bottom = 1089.0
script = ExtResource("7_c7t16")

[node name="Hearts" type="Control" parent="Field"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 1181.0
offset_bottom = 1376.0
grow_horizontal = 2
script = ExtResource("8_fhn0x")

[node name="SuiteSymbol" type="TextureRect" parent="Field/Hearts"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_left = 26.0
offset_right = 106.0
offset_bottom = 90.0
texture = ExtResource("9_k3wye")
ignore_texture_size = true
stretch_mode = 5

[node name="SlotContainer" type="HBoxContainer" parent="Field/Hearts"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="RedrawCardArea" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = -187.0
offset_right = 328.0
offset_bottom = -87.0
grow_vertical = 0
theme_override_constants/separation = 5
alignment = 2
script = ExtResource("10_if57e")

[node name="PlayAgainArea" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -333.0
offset_top = -187.0
offset_right = -33.0
offset_bottom = -87.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.810653, 0.881159)
theme_override_constants/separation = 5
script = ExtResource("11_61q87")

[node name="Deck" type="Label" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 2335.0
offset_right = 264.0
offset_bottom = 2383.0
text = "50 Cards in Deck"
script = ExtResource("12_54ssd")

[node name="HelpMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -303.0
offset_right = -30.0
offset_bottom = -255.0
grow_horizontal = 2
grow_vertical = 0
text = "Help Message"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3
script = ExtResource("13_j0q4n")

[node name="NewRoundAnimation" type="CanvasLayer" parent="."]
script = ExtResource("17_hf8a0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="NewRoundAnimation"]
libraries = {
"": SubResource("AnimationLibrary_qhb30")
}

[node name="TextureRect" type="Panel" parent="NewRoundAnimation"]
custom_minimum_size = Vector2(0, 200)
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -100.0
offset_right = -50.1104
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TurnCounter" type="Label" parent="NewRoundAnimation/TextureRect"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_right = -0.000244141
offset_bottom = 140.0
grow_horizontal = 2
scale = Vector2(1, 1.01823)
theme_override_font_sizes/font_size = 80
text = "Turn 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShuffleMessage" type="Label" parent="NewRoundAnimation/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -55.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Shuffling deck..."
horizontal_alignment = 1

[node name="Tutorial" parent="." instance=ExtResource("18_vn86j")]
visible = false
